2005-03-18  Daniel Berlin  <dberlin@dberlin.org>

Fix PR tree-optimization/20542

	* tree-flow-inline.h (overlap_subvar): Move to here.
	* tree-ssa-operands.c: From here.
	* tree-flow.h (overlap_subvar): Declare.
	* tree-ssa-alias.c (add_pointed_to_var): Use overlap_subvar here.
	* tree-ssa-loop-im.c (is_call_clobbered_ref): Return proper answer
	for variables with subvars.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@96829 138bc75d-0d04-0410-961f-82ee72b054a4